[project]
name = "seo-automation"
version = "0.1.0"
description = "SEO automation: SERP → scrape competitors → AI-generate meta → Google Docs"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "beautifulsoup4>=4.12.0",
    "google-auth>=2.29.0",
    "google-api-python-client>=2.126.0",
    "httpx>=0.27.0",
    "lxml>=5.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
]

[project.scripts]
seo-automation = "main:main"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["ai_client", "config", "docs_client", "main", "models", "scraper", "serp_client", "sheets_client"]
